@@ -74,28 +74,24 @@ package require <b>pdf4tcl ?0.3.x?</b><br>
 <tr valign=top ><td ><a href="#26"><i class='arg'>objectName</i> <strong>text</strong> <i class='arg'>str</i> ?<i class='arg'>option value</i>...?</a></td></tr>
 <tr valign=top ><td ><a href="#27"><i class='arg'>objectName</i> <strong>drawTextAt</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>str</i> ?<i class='arg'>option value</i>...?</a></td></tr>
 <tr valign=top ><td ><a href="#28"><i class='arg'>objectName</i> <strong>drawTextBox</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> <i class='arg'>str</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#29"><i class='arg'>objectName</i> <strong>beginTextObj</strong></a></td></tr>
-<tr valign=top ><td ><a href="#30"><i class='arg'>objectName</i> <strong>endTextObj</strong></a></td></tr>
-<tr valign=top ><td ><a href="#31"><i class='arg'>objectName</i> <strong>getFontMetric</strong> <i class='arg'>metric</i></a></td></tr>
-<tr valign=top ><td ><a href="#32"><i class='arg'>objectName</i> <strong>rotateText</strong> <i class='arg'>angle</i></a></td></tr>
-<tr valign=top ><td ><a href="#33"><i class='arg'>objectName</i> <strong>skewText</strong> <i class='arg'>xangle</i> <i class='arg'>yangle</i></a></td></tr>
-<tr valign=top ><td ><a href="#34"><i class='arg'>objectName</i> <strong>putImage</strong> <i class='arg'>id</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#35"><i class='arg'>objectName</i> <strong>putRawImage</strong> <i class='arg'>data</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#36"><i class='arg'>objectName</i> <strong>addImage</strong> <i class='arg'>filename</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#37"><i class='arg'>objectName</i> <strong>addRawImage</strong> <i class='arg'>data</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#38"><i class='arg'>objectName</i> <strong>setBgColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
-<tr valign=top ><td ><a href="#39"><i class='arg'>objectName</i> <strong>setFillColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
-<tr valign=top ><td ><a href="#40"><i class='arg'>objectName</i> <strong>setStrokeColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
-<tr valign=top ><td ><a href="#41"><i class='arg'>objectName</i> <strong>closePath</strong></a></td></tr>
-<tr valign=top ><td ><a href="#42"><i class='arg'>objectName</i> <strong>moveTo</strong> <i class='arg'>x</i> <i class='arg'>y</i></a></td></tr>
-<tr valign=top ><td ><a href="#43"><i class='arg'>objectName</i> <strong>setLineStyle</strong> <i class='arg'>width</i> <i class='arg'>args</i></a></td></tr>
-<tr valign=top ><td ><a href="#44"><i class='arg'>objectName</i> <strong>line</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a></td></tr>
-<tr valign=top ><td ><a href="#45"><i class='arg'>objectName</i> <strong>qCurve</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>xc</i> <i class='arg'>yc</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a></td></tr>
-<tr valign=top ><td ><a href="#46"><i class='arg'>objectName</i> <strong>polygon</strong> ?<i class='arg'>x y</i>...? ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#47"><i class='arg'>objectName</i> <strong>circle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> ?<i class='arg'>option value</i>...?</a></td></tr>
-<tr valign=top ><td ><a href="#48"><i class='arg'>objectName</i> <strong>arc</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> <i class='arg'>phi</i> <i class='arg'>extend</i></a></td></tr>
-<tr valign=top ><td ><a href="#49"><i class='arg'>objectName</i> <strong>arrow</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i> <i class='arg'>size</i> ?<i class='arg'>angle</i>?</a></td></tr>
-<tr valign=top ><td ><a href="#50"><i class='arg'>objectName</i> <strong>rectangle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#29"><i class='arg'>objectName</i> <strong>getFontMetric</strong> <i class='arg'>metric</i></a></td></tr>
+<tr valign=top ><td ><a href="#30"><i class='arg'>objectName</i> <strong>rotateText</strong> <i class='arg'>angle</i></a></td></tr>
+<tr valign=top ><td ><a href="#31"><i class='arg'>objectName</i> <strong>skewText</strong> <i class='arg'>xangle</i> <i class='arg'>yangle</i></a></td></tr>
+<tr valign=top ><td ><a href="#32"><i class='arg'>objectName</i> <strong>putImage</strong> <i class='arg'>id</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#33"><i class='arg'>objectName</i> <strong>putRawImage</strong> <i class='arg'>data</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#34"><i class='arg'>objectName</i> <strong>addImage</strong> <i class='arg'>filename</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#35"><i class='arg'>objectName</i> <strong>addRawImage</strong> <i class='arg'>data</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#36"><i class='arg'>objectName</i> <strong>setBgColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
+<tr valign=top ><td ><a href="#37"><i class='arg'>objectName</i> <strong>setFillColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
+<tr valign=top ><td ><a href="#38"><i class='arg'>objectName</i> <strong>setStrokeColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a></td></tr>
+<tr valign=top ><td ><a href="#39"><i class='arg'>objectName</i> <strong>setLineStyle</strong> <i class='arg'>width</i> <i class='arg'>args</i></a></td></tr>
+<tr valign=top ><td ><a href="#40"><i class='arg'>objectName</i> <strong>line</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a></td></tr>
+<tr valign=top ><td ><a href="#41"><i class='arg'>objectName</i> <strong>qCurve</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>xc</i> <i class='arg'>yc</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a></td></tr>
+<tr valign=top ><td ><a href="#42"><i class='arg'>objectName</i> <strong>polygon</strong> ?<i class='arg'>x y</i>...? ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#43"><i class='arg'>objectName</i> <strong>circle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> ?<i class='arg'>option value</i>...?</a></td></tr>
+<tr valign=top ><td ><a href="#44"><i class='arg'>objectName</i> <strong>arc</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> <i class='arg'>phi</i> <i class='arg'>extend</i></a></td></tr>
+<tr valign=top ><td ><a href="#45"><i class='arg'>objectName</i> <strong>arrow</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i> <i class='arg'>size</i> ?<i class='arg'>angle</i>?</a></td></tr>
+<tr valign=top ><td ><a href="#46"><i class='arg'>objectName</i> <strong>rectangle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> ?<i class='arg'>option value</i>...?</a></td></tr>
 </table></td></tr></table>
 <h2><a name="description">DESCRIPTION</a></h2>
 <p>
@@ -397,11 +393,7 @@ Draw text. Deprecated. Use <strong>text</strong>.
 Draw text.
 
 <br><br>
-<dt><a name="29"><i class='arg'>objectName</i> <strong>beginTextObj</strong></a><dd>
-
-<dt><a name="30"><i class='arg'>objectName</i> <strong>endTextObj</strong></a><dd>
-
-<dt><a name="31"><i class='arg'>objectName</i> <strong>getFontMetric</strong> <i class='arg'>metric</i></a><dd>
+<dt><a name="29"><i class='arg'>objectName</i> <strong>getFontMetric</strong> <i class='arg'>metric</i></a><dd>
 
 
 Get information about current font. The available <i class='arg'>metric</i>s are
@@ -409,9 +401,9 @@ Get information about current font. The available <i class='arg'>metric</i>s are
 <strong>height</strong>.
 
 <br><br>
-<dt><a name="32"><i class='arg'>objectName</i> <strong>rotateText</strong> <i class='arg'>angle</i></a><dd>
+<dt><a name="30"><i class='arg'>objectName</i> <strong>rotateText</strong> <i class='arg'>angle</i></a><dd>
 
-<dt><a name="33"><i class='arg'>objectName</i> <strong>skewText</strong> <i class='arg'>xangle</i> <i class='arg'>yangle</i></a><dd>
+<dt><a name="31"><i class='arg'>objectName</i> <strong>skewText</strong> <i class='arg'>xangle</i> <i class='arg'>yangle</i></a><dd>
 
 
 </dl>
@@ -424,7 +416,7 @@ unsupported formats, use Tk and the Img package to load and dump images to raw f
 
 <dl>
 
-<dt><a name="34"><i class='arg'>objectName</i> <strong>putImage</strong> <i class='arg'>id</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="32"><i class='arg'>objectName</i> <strong>putImage</strong> <i class='arg'>id</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 
 Put an image on the current page. The image must have beend added previously by <strong>addImage</strong> or
@@ -444,7 +436,7 @@ the height is selected to preserve the aspect ratio of the image.
 
 </dl>
 
-<dt><a name="35"><i class='arg'>objectName</i> <strong>putRawImage</strong> <i class='arg'>data</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="33"><i class='arg'>objectName</i> <strong>putRawImage</strong> <i class='arg'>data</i> <i class='arg'>x</i> <i class='arg'>y</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 Put an image on the current page. Works like <strong>putImage</strong> except that the raw image data is given directly.
 
@@ -455,7 +447,7 @@ Put an image on the current page. Works like <strong>putImage</strong> except th
 </pre></td></tr></table></p>
 
 <br><br>
-<dt><a name="36"><i class='arg'>objectName</i> <strong>addImage</strong> <i class='arg'>filename</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="34"><i class='arg'>objectName</i> <strong>addImage</strong> <i class='arg'>filename</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 
 Add an image to the document. Returns an id that can be used in subsequent
@@ -472,7 +464,7 @@ Set the image type.  This can usually be deduced from the file name, this
 option helps when that is not possible.  This can be either &quot;png&quot; or &quot;jpeg&quot;.
 </dl>
 
-<dt><a name="37"><i class='arg'>objectName</i> <strong>addRawImage</strong> <i class='arg'>data</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="35"><i class='arg'>objectName</i> <strong>addRawImage</strong> <i class='arg'>data</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 <p><table><tr><td bgcolor=black>&nbsp;</td><td><pre class='sample'>
   image create photo img1 -file image.gif
@@ -486,11 +478,11 @@ option helps when that is not possible.  This can be either &quot;png&quot; or &
 <p>
 <dl>
 
-<dt><a name="38"><i class='arg'>objectName</i> <strong>setBgColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
+<dt><a name="36"><i class='arg'>objectName</i> <strong>setBgColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
 
-<dt><a name="39"><i class='arg'>objectName</i> <strong>setFillColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
+<dt><a name="37"><i class='arg'>objectName</i> <strong>setFillColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
 
-<dt><a name="40"><i class='arg'>objectName</i> <strong>setStrokeColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
+<dt><a name="38"><i class='arg'>objectName</i> <strong>setStrokeColor</strong> <i class='arg'>red</i> <i class='arg'>green</i> <i class='arg'>blue</i></a><dd>
 
 
 </dl>
@@ -498,27 +490,22 @@ option helps when that is not possible.  This can be either &quot;png&quot; or &
 <p>
 <dl>
 
-<dt><a name="41"><i class='arg'>objectName</i> <strong>closePath</strong></a><dd>
+<dt><a name="39"><i class='arg'>objectName</i> <strong>setLineStyle</strong> <i class='arg'>width</i> <i class='arg'>args</i></a><dd>
 
-<dt><a name="42"><i class='arg'>objectName</i> <strong>moveTo</strong> <i class='arg'>x</i> <i class='arg'>y</i></a><dd>
+<dt><a name="40"><i class='arg'>objectName</i> <strong>line</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a><dd>
 
+<dt><a name="41"><i class='arg'>objectName</i> <strong>qCurve</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>xc</i> <i class='arg'>yc</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a><dd>
 
-<dt><a name="43"><i class='arg'>objectName</i> <strong>setLineStyle</strong> <i class='arg'>width</i> <i class='arg'>args</i></a><dd>
+<dt><a name="42"><i class='arg'>objectName</i> <strong>polygon</strong> ?<i class='arg'>x y</i>...? ?<i class='arg'>option value</i>...?</a><dd>
 
-<dt><a name="44"><i class='arg'>objectName</i> <strong>line</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a><dd>
+<dt><a name="43"><i class='arg'>objectName</i> <strong>circle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> ?<i class='arg'>option value</i>...?</a><dd>
 
-<dt><a name="45"><i class='arg'>objectName</i> <strong>qCurve</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>xc</i> <i class='arg'>yc</i> <i class='arg'>x2</i> <i class='arg'>y2</i></a><dd>
+<dt><a name="44"><i class='arg'>objectName</i> <strong>arc</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> <i class='arg'>phi</i> <i class='arg'>extend</i></a><dd>
 
-<dt><a name="46"><i class='arg'>objectName</i> <strong>polygon</strong> ?<i class='arg'>x y</i>...? ?<i class='arg'>option value</i>...?</a><dd>
-
-<dt><a name="47"><i class='arg'>objectName</i> <strong>circle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> ?<i class='arg'>option value</i>...?</a><dd>
-
-<dt><a name="48"><i class='arg'>objectName</i> <strong>arc</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>radius</i> <i class='arg'>phi</i> <i class='arg'>extend</i></a><dd>
-
-<dt><a name="49"><i class='arg'>objectName</i> <strong>arrow</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i> <i class='arg'>size</i> ?<i class='arg'>angle</i>?</a><dd>
+<dt><a name="45"><i class='arg'>objectName</i> <strong>arrow</strong> <i class='arg'>x1</i> <i class='arg'>y1</i> <i class='arg'>x2</i> <i class='arg'>y2</i> <i class='arg'>size</i> ?<i class='arg'>angle</i>?</a><dd>
 
 
-<dt><a name="50"><i class='arg'>objectName</i> <strong>rectangle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> ?<i class='arg'>option value</i>...?</a><dd>
+<dt><a name="46"><i class='arg'>objectName</i> <strong>rectangle</strong> <i class='arg'>x</i> <i class='arg'>y</i> <i class='arg'>width</i> <i class='arg'>height</i> ?<i class='arg'>option value</i>...?</a><dd>
 
 
 </dl>
